--- a/L1_byoNN/Lab 1 - Neural Network from Scratch.ipynb
+++ b/L1_byoNN/Lab 1 - Neural Network from Scratch.ipynb
@@ -353,24 +353,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "from miniflow import *"
+    "# NOT WORKING\n",
+    "#%load_ext autoreload\n",
+    "#%autoreload 2\n",
+    "#from miniflow import *"
    ]
   },
   {
@@ -390,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -404,7 +396,7 @@
     }
    ],
    "source": [
-    "from miniflow import * #autoreload not working\n",
+    "from miniflow import *\n",
     "\n",
     "x = Input()\n",
     "y = Input()\n",
@@ -514,12 +506,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All good!\n"
+     ]
+    }
+   ],
    "source": [
+    "from miniflow import *\n",
+    "\n",
     "x_in, w_in, b_in = Input(), Input(), Input()\n",
     "\n",
     "# TODO: implement Linear\n",
@@ -532,10 +534,13 @@
     "\n",
     "feed_dict = {x_in: x, w_in: w, b_in: b}\n",
     "loss, grad = value_and_grad(f, feed_dict, (x_in, w_in, b_in))\n",
+    "\n",
     "assert np.allclose(loss, np.array([[-9.,  6.], [-9.,  6.]]))\n",
     "assert np.allclose(grad[0], np.array([[-1.,  -1.], [-1.,  -1.]]))\n",
     "assert np.allclose(grad[1], np.array([[-2.,  -2.], [-4., -4.]]))\n",
-    "assert np.allclose(grad[2], np.array([[2., 2.]]))"
+    "assert np.allclose(grad[2], np.array([[2., 2.]]))\n",
+    "\n",
+    "print(\"All good!\")"
    ]
   },
   {
@@ -559,12 +564,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All good!\n"
+     ]
+    }
+   ],
    "source": [
+    "from miniflow import *\n",
+    "\n",
     "x_in = Input()\n",
     "\n",
     "# TODO: implement Sigmoid\n",
@@ -576,7 +591,9 @@
     "feed_dict = {x_in: x}\n",
     "loss, grad = value_and_grad(f, feed_dict, [x_in])\n",
     "assert np.allclose(loss, np.array([0., 0.5, 1.]), atol=1.e-4)\n",
-    "assert np.allclose(grad, np.array([0., 0.25, 0.]), atol=1.e-4)"
+    "assert np.allclose(grad, np.array([0., 0.25, 0.]), atol=1.e-4)\n",
+    "\n",
+    "print(\"All good!\")"
    ]
   },
   {
@@ -622,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -690,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -709,12 +726,14 @@
        "0.51082562376599072"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "from miniflow import *\n",
+    "\n",
     "# 60% apple, 10% banana, 25% pineapple ... (crazy or maybe quantum world)\n",
     "Qx = np.array([0.6, 0.1, 0.30]) \n",
     "# 100% apple\n",
@@ -770,12 +789,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-cda4eeb93b50>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;32massert\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mallclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_softmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0.1863\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.3072\u001b[0m\u001b[0;34m,\u001b[0m  \u001b[0;36m0.5064\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0matol\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1.e-4\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# notice the values sum to 1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;32massert\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mallclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mloss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1.1802\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0matol\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1.e-4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mallclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgrad\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0.1863\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m0.6928\u001b[0m\u001b[0;34m,\u001b[0m  \u001b[0;36m0.5064\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0matol\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1.e-4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"All good!\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
+    "from miniflow import *\n",
+    "\n",
     "x_in = Input()\n",
     "y_in = Input()\n",
     "\n",
@@ -795,7 +828,9 @@
     "# respect to x\n",
     "assert np.allclose(f._softmax(x), [[0.1863, 0.3072,  0.5064]], atol=1.e-4) # notice the values sum to 1\n",
     "assert np.allclose(loss, 1.1802, atol=1.e-4)\n",
-    "assert np.allclose(grad, np.array([[0.1863, -0.6928,  0.5064]]), atol=1.e-4)"
+    "assert np.allclose(grad, np.array([[0.1863, -0.6928,  0.5064]]), atol=1.e-4)\n",
+    "\n",
+    "print(\"All good!\")"
    ]
   },
   {
@@ -854,11 +889,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully downloaded train-images-idx3-ubyte.gz 9912422 bytes.\n",
+      "Extracting MNIST_data/train-images-idx3-ubyte.gz\n",
+      "Successfully downloaded train-labels-idx1-ubyte.gz 28881 bytes.\n",
+      "Extracting MNIST_data/train-labels-idx1-ubyte.gz\n",
+      "Successfully downloaded t10k-images-idx3-ubyte.gz 1648877 bytes.\n",
+      "Extracting MNIST_data/t10k-images-idx3-ubyte.gz\n",
+      "Successfully downloaded t10k-labels-idx1-ubyte.gz 4542 bytes.\n",
+      "Extracting MNIST_data/t10k-labels-idx1-ubyte.gz\n"
+     ]
+    }
+   ],
    "source": [
     "# load MNIST\n",
     "from tensorflow.examples.tutorials.mnist import input_data\n",
@@ -867,11 +917,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(128, 784) (128,)\n"
+     ]
+    }
+   ],
    "source": [
     "# getting input and label data\n",
     "X_batch, y_batch = mnist.train.next_batch(128)\n",
@@ -880,16 +938,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All good!\n"
+     ]
+    }
+   ],
    "source": [
     "X_val = mnist.validation.images\n",
     "y_val = mnist.validation.labels.astype(np.int8)\n",
     "X_test = mnist.test.images\n",
-    "y_test = mnist.test.labels.astype(np.int8)"
+    "y_test = mnist.test.labels.astype(np.int8)\n",
+    "\n",
+    "print(\"All good!\")"
    ]
   },
   {
@@ -975,22 +1043,23 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [conda env:carnd]",
    "language": "python",
-   "name": "python2"
+   "name": "conda-env-carnd-py"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
