--- a/traffic-signs/Traffic_Signs_Recognition.ipynb
+++ b/traffic-signs/Traffic_Signs_Recognition.ipynb
@@ -199,6 +199,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# I. Preprocessing"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 178,
    "metadata": {
@@ -346,9 +353,18 @@
     "2. crop 6 pixels from the borders to yield a 48 x 48 image\n",
     "3. Normalise using Contrast Limited Adaptive Histogram Equalisation, or [CLAHE](https://en.wikipedia.org/wiki/Adaptive_histogram_equalization), on the Y channel of YUV image to improve contrast. Parameters: clip limit of 1, 6x6 grid.\n",
     "\n",
-    "I'm not sure if the adaptive histogram equalisation used in Ciresan'12 was contrast limited. However, results obtained are similar to the ones reported. I'm also not sure if the border trimming reported in Ciresan'12 was performed computationally, it'd be possible to attempt this method without the cropping step. The cropped amount (8 pixels) was chosen after a few attempts, by visual inspection of small samples.\n",
+    "Algorithm chosen was Adaptive Histogram Equalization (AHE), because this method produced the most stable results in Ciresan'12. I'm not sure if the AHE used in that work was contrast limited. However, results obtained are, upon visual inspection of small samples, similar to the ones reported. \n",
+    "\n",
+    "I'm also not sure if the border trimming reported in Ciresan'12 was performed computationally, but this is the only viable method for this work. It'd be possible to attempt this method without the cropping step. The cropped amount (8 pixels) was chosen after a few attempts, by visual inspection of small samples.\n",
     "\n",
     "The preprocessing step seemingly discarded mostly useless information, and greatly improve the visibility of very dark images, even allowing for color recognition (see test 1, case `bad_train[3]`). Quality of images with better visibility isn't terribly affected, although blue signs with decent visibility seem to suffer a bit (see test 2). "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# II. Additional Data Generation"
    ]
   },
   {
@@ -379,21 +395,80 @@
    "source": [
     "**Answer:**\n",
     "\n",
-    "At this stage, the need to generate additional data hasn't prevented itself, but this step might be revisited after getting initial results."
+    "Ciresan'12 used distortions in the dataset, introduced after each epoch of training, to generate random extra samples. This method won't be implemented in this work unless results obtained without it are below expectations."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# III. Architecture"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 193,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'inputs' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-193-46b2bfb783cd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;31m# Operations:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m layer1 = tf.nn.conv2d(input = tf.tanh(inputs), filter = W01,\n\u001b[0m\u001b[1;32m     22\u001b[0m                       strides = st, padding = \"VALID\")\n\u001b[1;32m     23\u001b[0m layer2 = tf.nn.dilation2d(input = tf.tanh(layer1), filter = W12,\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'inputs' is not defined"
+     ]
+    }
+   ],
    "source": [
     "### Define your architecture here.\n",
     "### Feel free to use as many code cells as needed.\n",
+    "import tensorflow as tf\n",
     "\n",
-    "#\n"
+    "# Parameters\n",
+    "st = [1] * 4 # stride used in all steps\n",
+    "rt = [1, 0, 0, 1] # rate used in max pooling steps\n",
+    "\n",
+    "# Layers: (Do I really need this?)\n",
+    "L0 = tf.placeholder(tf.float32, shape=(48, 48, 3))   # L[0]: input\n",
+    "L1 = tf.placeholder(tf.float32, shape=(42, 42, 100)) # L[1]: conv\n",
+    "L2 = tf.placeholder(tf.float32, shape=(21, 21, 100)) # L[2]: max-pool\n",
+    "L3 = tf.placeholder(tf.float32, shape=(18, 18, 150)) # L[3]: conv\n",
+    "L4 = tf.placeholder(tf.float32, shape=(9, 9, 150))   # L[4]: max-pool\n",
+    "L5 = tf.placeholder(tf.float32, shape=(6, 6, 250))   # L[5]: conv\n",
+    "L6 = tf.placeholder(tf.float32, shape=(3, 3, 250))   # L[6]: max-pool\n",
+    "L7 = tf.placeholder(tf.float32, shape=(300))         # L[7]: fully connected\n",
+    "L8 = tf.placeholder(tf.float32, shape=(43))          # L[8]: output\n",
+    "\n",
+    "# Operations:\n",
+    "layer1 = tf.nn.conv2d(input = tf.tanh(inputs), filter = W01,\n",
+    "                      strides = st, padding = \"VALID\")\n",
+    "layer2 = tf.nn.dilation2d(input = tf.tanh(layer1), filter = W12,\n",
+    "                          strides = st, rates = rt, padding = \"VALID\")\n",
+    "layer3 = tf.nn.conv2d(input = tf.tanh(layer2), filter = W23,\n",
+    "                      strides = st, padding = \"VALID\")\n",
+    "layer4 = tf.nn.dilation2d(input = tf.tanh(layer3), filter = W34,\n",
+    "                          strides = st, rates = rt, padding = \"VALID\")\n",
+    "layer5 = tf.nn.conv2d(input = tf.tanh(layer4), filter = W45,\n",
+    "                      strides = st, padding = \"VALID\")\n",
+    "layer6 = tf.nn.dilation2d(input = tf.tanh(layer5), filter = W56,\n",
+    "                          strides = st, rates = rt, padding = \"VALID\")\n",
+    "layer7 = tf.matmul(tf.tanh(layer6), W67)\n",
+    "output = tf.nn.softmax(tf.matmul(tf.tanh(layer7), W78))\n",
+    "\n",
+    "# Weights:\n",
+    "W01 = tf.placeholder(tf.float32, shape=(7, 7, 3, 100))   # convolution kernel\n",
+    "W12 = tf.placeholder(tf.float32, shape=(2, 2, 100))      # max pooling kernel\n",
+    "W23 = tf.placeholder(tf.float32, shape=(4, 4, 100, 150)) # convolution kernel\n",
+    "W34 = tf.placeholder(tf.float32, shape=(2, 2, 150))      # max pooling kernel\n",
+    "W45 = tf.placeholder(tf.float32, shape=(4, 4, 150, 250)) # convolution kernel\n",
+    "W56 = tf.placeholder(tf.float32, shape=(2, 2, 250))      # max pooling kernel\n",
+    "W67 = tf.placeholder(tf.float32, shape=(2250, 300))      # fully connected layer\n",
+    "W78 = tf.placeholder(tf.float32, shape=(300, 43))        # output layer"
    ]
   },
   {
@@ -414,15 +489,17 @@
     "\n",
     "Same architecture will be used here as in Ciresan'12. These are the layers used:\n",
     "\n",
-    "0. Input - 48×48×3 (RGB image)\n",
-    "1. Convolution - 42×42×100 (7×7 kernel)\n",
-    "2. Max-pooling - 21×21×100 (2×2 kernel)\n",
-    "3. Convolution - 18×18×150 (4×4 kernel)\n",
-    "4. Max-pooling - 9×9×150 (2×2 kernel)\n",
-    "5. Convolution - 6×6×250 (4×4 kernel)\n",
-    "6. Max-pooling - 3×3×250 (2×2 kernel)\n",
-    "7. Fully connected - 300\n",
-    "8. Output - 43\n",
+    "0. Input → 48×48 neurons with 3 maps (RGB image regularised to [0,1])\n",
+    "1. Convolution (7×7 kernel) → 42×42 neurons with 100 maps\n",
+    "2. Max-pooling (2×2 kernel) → 21×21 neurons with 100 maps\n",
+    "3. Convolution (4×4 kernel) → 18×18 neurons with 150 maps\n",
+    "4. Max-pooling (2×2 kernel) → 9×9 neurons with 150 maps\n",
+    "5. Convolution (4×4 kernel) → 6×6 neurons with 250 maps\n",
+    "6. Max-pooling (2×2 kernel) → 3×3 neurons with 250 maps\n",
+    "7. Fully connected → 300 neurons\n",
+    "8. Output → 43 neurons\n",
+    "\n",
+    "Activation function is a hyperbolic function in all but the output layer, which uses a softmax function.\n",
     "\n",
     "Training time reported in the papers was 37h for an ensemble of 25 DNNS, using a machine with 3.3GHz, 24GB DDR3 and four GTX580 GPUs. The machine available to me has 2.7GHz, 16GB DDR3 and one GT650 GPU. It's hard to estimate, but I'm hoping a single DNN with this configuration will be successfully trained overnight."
    ]
