training title added

--- a/traffic-signs/Traffic_Signs_Recognition.ipynb
+++ b/traffic-signs/Traffic_Signs_Recognition.ipynb
@@ -656,6 +656,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# IV. Training"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 216,
    "metadata": {
